Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -70,7 +70,6 @@ body {
 	=============================== */
 
 .widget.extendednavigation {
-	float:right;
 	position: relative;
 	z-index: 5000;
 	background-color:@color-swatch3;
